# docassemble-ALAffidavitOfIndigency

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: interview-upkeep.yml  publish.yml  run_form_tests.yml
docassemble/ALAffidavitOfIndigency/: affidavit_helpers.py
docassemble/ALAffidavitOfIndigency/data/questions/: affidavit.yml  affidavit_body.yml  affidavit_of_indigency_supplement_body.yml  review_page.yml
docassemble/ALAffidavitOfIndigency/data/sources/: Affidavit_Indigency.feature  all_through.feature  supplement.feature
docassemble/ALAffidavitOfIndigency/data/templates/: affidavit_of_indigency_supplement_next_steps.docx
